--- a/index.html
+++ b/index.html
@@ -118,8 +118,12 @@
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
 			</div>   -->
 			<div class="row_download">  
-			<div class="download_text"> <!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> </div>
-<div class="french"><a href="https://www.nature.com/articles/s44284-025-00307-w"> Publication</a></div>
+			<div class="download_text"> Link</div><!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> 
+			<div class="eng"><a href="https://www.nature.com/articles/s44284-025-00307-w"> Publication</a></div>
+</div> 
+			<div class="row_download">  
+			<div class="download_text">  & </div>
+<div class="french"><a href="https://hal.science/hal-05233175"> Pre-print</a></div>
 			</div>
 		</div>
 	<br> 
@@ -156,7 +160,7 @@
 			<i>Environmental Modelling and Assessment</i>, 2024. </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://link.springer.com/article/10.1007/s10666-024-10011-z">Publication</a></div>  
+			<div class="download_text">Link</div><div class="french"><a href="https://link.springer.com/article/10.1007/s10666-024-10011-z">Publication</a></div>  
 			</div>   
 			<div class="row_download">  
 			<div class="download_text">  & </div>
@@ -171,7 +175,7 @@
 			<i>Journal of Environmental Economics and Management</i>, <b>199</b>, 102819. <a href="https://zenodo.org/record/7044013"> Data &amp; replication code </a></div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>
+			<div class="download_text">Link</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>
 			<!--https://assets.researchsquare.com/files/rs-658539/v1_covered.pdf	-->
 			</div>  
 			<div class="row_download">
@@ -197,7 +201,7 @@
 			<i> Environmental Research Letters</i>, <b>16</b> 054003. <a href="https://zenodo.org/record/4266325"> Data &amp; replication code </a> </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://doi.org/10.1088/1748-9326/abdbf0">Paper</a></div>
+			<div class="download_text">Link</div><div class="french"><a href="https://doi.org/10.1088/1748-9326/abdbf0">Paper</a></div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">&</div>
