--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			</div>   -->
 			<div class="row_download">  
 			<div class="download_text"> Link</div><!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> 
-			<div class="eng"><a href="https://www.nature.com/articles/s44284-025-00307-w"> Publication</a></div>
+			<div class="french"><a href="https://www.nature.com/articles/s44284-025-00307-w"> Publication</a></div>
 </div> 
 			<div class="row_download">  
 			<div class="download_text">  & </div>
