--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
+<div class="line1"> J. Jacob, A. Leblois, M. Brunette, <!-- (2024) --> <b>The public management of price risk after a supply shock: storage versus target price</b>, <i>Applied Economics</i>, 2025. </div>
+			</div>
+			<div class="row_download">
+			<div class="download_text">Link</div><div class="french"><a href="https://www.tandfonline.com/doi/full/10.1080/00036846.2025.2585210">Publication</a></div>  
+			</div>   
+			<div class="row_download">  
+			<div class="download_text">  & </div>
+<div class="french"><a href="https://hal.inrae.fr/hal-04839756v1"> Pre-print</a></div>
+	</div>
+	</div>
+		<br>		
+<br class="clearfix" />
+        <div class="row">
+	<div class="row_info">
 <div class="line1"> N. Mondolfo, A. Leblois, P. Delacote, L. Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
 			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. <a href="https://doi.org/10.57745/G1LWND"> Data </a> &amp; <a href="https://doi.org/10.5281/zenodo.15518253"> replication code. </a> </div>
 </div>
