--- a/index.html
+++ b/index.html
@@ -637,6 +637,12 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 		<p>
 		<div class="row">
 			<div class="row_info">
+				<div class="line1"> Lecture on <b> global wood industry, carbon markets, land use and forest management (master bois, U. Montpellier) </b> </div>
+				<div class="line2"> ==> <a href="http://antoine.leblois.free.fr/EconomieCarboneForetBois_2025.pdf">Link (Fr)</a> </div>
+			</div>
+		</div>
+				<div class="row">
+			<div class="row_info">
 				<div class="line1"> Lecture on <b> weather data for economists </b> </div>
 				<div class="line2"> ==> <a href="http://antoine.leblois.free.fr/Pres_donneesMeteo.pdf">Link (Fr)</a> </div>
 			</div>
@@ -776,7 +782,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 	</div>
 	<div class="content">
 		<p>
-<strong> Present position: INRAE, Researcher (CRCN), habilitated to conduct research (HDR) </strong> <br><br>
+<strong> Present position: INRAE, Researcher (CR), habilitated to conduct research (HDR) </strong> <br><br>
 <strong> 2013 - 2014:</strong> Post-doc at the EU <a href="http://ies.jrc.ec.europa.eu/">Joint Research Center</a> <br><br>
 <strong> 2012 - 2013: </strong>Post-Doc at <a href="http://www.economie.polytechnique.edu/accueil/recherche/">&Eacutecole Polytechnique</a>, Paris. <br><br>
 <strong> Sept. 2011 - March 2012: </strong>AMID (Marie Curie) fellow at <a href="http://www.unamur.be/eco/economie/cred/"> CRED</a>, Namur.
@@ -899,8 +905,8 @@ Codes for &nbsp; &nbsp; &nbsp; &nbsp; <a href=http://antoine.leblois.free.fr/Han
 <br class="clearfix" />
 <br><br>
 
-<strong> Friends: </strong> <br> 
-<a href="http://www.parisschoolofeconomics.eu/fr/lorenceau-adrien/"> Adrien Lorenceau </a>  &nbsp; &nbsp; &nbsp; &nbsp;
+<strong> Other: rong> <br> 
+<a href="https://liseo.france-education-international.fr/index.php?lvl=author_see&id=25489"> Adrien Lorenceau </a>  &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://sites.google.com/site/karinemarazyan/index"> Karine Marazyan  </a> &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="http://www.morgane-laouenan.fr/"> Morgane Laouenan </a> &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://phroudier.wordpress.com"> Philippe Roudier </a>
