--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="info_job">PhD, (HDR)</div>
 	<div class="info_location"> <b> <p style="color:#00CCCC";> INRAE </b> <!-- (Institut national de recherche pour l'agr., l'alim. et l'env.) --><br></p>
  <a href="https://www.cee-m.fr/member/antoine-leblois/"> CEE-M </a> (Centre d'&Eacuteconomie de l'Environnement de Montpellier) <br>
- <a href="https://scholar.google.fr/citations?user=NisYobgAAAAJ&hl=fr"> ScholarG </a> <a href="https://www.researchgate.net/profile/Antoine-Leblois"> / ResearchGate </a><br><br></div>
+ <a href="https://scholar.google.fr/citations?user=NisYobgAAAAJ&hl=fr"> GoogleScholar </a> <a href="https://www.researchgate.net/profile/Antoine-Leblois"> / ResearchGate </a><br><br></div>
  	<!-- Laboratoire d'&Eacuteconomie Foresti&egravere Ecole Polytechnique, CECO, Laboratoire d'econom&eacutetrie Palaiseaux, France, Via E. Fermi, 2749, 21027 Ispra (VA), Italy Tel: +39.0332.78.5023 -->
 	<div class="info_autre">
 	</div>
