--- a/index.html
+++ b/index.html
@@ -966,8 +966,8 @@ Jorge Cabrera Delgado-->
 		<br> Phone: 04.99.61.22.18 <br> 
 		E-mail: antoine.leblois (at) inra 'dot' fr<br>
 		<a href="http://www.cee-m.fr/member/antoine-leblois/"> CEEM personal webpage </a><br>
-		<a href="http://antoine.leblois.free.fr"> Alternative version of this page <br> </a>
-		<a href="http://leblois.toile-libre.org"> Other version of this page <br> (toile-libre) </a>
+		<a href="http://antoine.leblois.free.fr"> Alternative version of this page  </a><br>
+		<a href="http://leblois.toile-libre.org"> Other version of this page (toile-libre) </a><br> 
 		</div>
 		<div id="footer_3">
 		<div class="footer_bluetext">Mailing Address</div> <br>
