--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@ Codes for &nbsp; &nbsp; &nbsp; &nbsp; <a href=http://antoine.leblois.free.fr/Han
 <br class="clearfix" />
 <br><br>
 
-<strong> Other: rong> <br> 
+<strong> Other: </strong> <br> 
 <a href="https://liseo.france-education-international.fr/index.php?lvl=author_see&id=25489"> Adrien Lorenceau </a>  &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://sites.google.com/site/karinemarazyan/index"> Karine Marazyan  </a> &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="http://www.morgane-laouenan.fr/"> Morgane Laouenan </a> &nbsp; &nbsp; &nbsp; &nbsp;
