--- a/index.html
+++ b/index.html
@@ -900,9 +900,10 @@ Codes for &nbsp; &nbsp; &nbsp; &nbsp; <a href=http://antoine.leblois.free.fr/Han
 &nbsp; &nbsp; &nbsp; <a href="https://www.researchgate.net/profile/Alessandra_Bianchi5"> Alexandra Bianchi </a>
 &nbsp; &nbsp; &nbsp; <a href="https://sites.google.com/view/paulinecastaing/"> Pauline Castaing </a>
 &nbsp; &nbsp; &nbsp; <a href="https://sites.google.com/site/soubeyranhomepage/"> Rapha&eumll Soubeyran </a>
-&nbsp; &nbsp; &nbsp; <a href="https://www.cee-m.fr/fr/member/girard-julia-2/"> Julia Girard </a>&nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://www.beta-economics.fr/annuaire/387/vaglietti_giulia/"> Giulia Vaglietti </a>&nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://sites.google.com/view/sdesbureaux"> Sébastien Desbureaux </a> 
+&nbsp; &nbsp; &nbsp; <a href="https://www.cee-m.fr/fr/member/girard-julia-2/"> Julia Girard </a> &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://www.beta-economics.fr/annuaire/387/vaglietti_giulia/"> Giulia Vaglietti </a> &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://sites.google.com/view/sdesbureaux"> Sébastien Desbureaux </a>  &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://leatardieu.wordpress.com/"> Léa Tardieu </a>  &nbsp; &nbsp; &nbsp; &nbsp;
 <br>
 
 <br class="clearfix" />
